css/chata-styles.css
/* ... */
.autoql-vanilla-chata-confirm-text {
    text-align: center;
    width: 100%;
}

.autoql-vanilla-clear-messages-confirm-popover {
    color: var(--chata-drawer-text-color-primary);
    background: var(--chata-drawer-background-color);
    text-align: right;
    padding: 18px !important;
    width: 266px;
}
.autoql-vanilla-chata-confirm-btn {
    margin: 7px 0px 0 2px !important;
    border-radius: 4px !important;
    cursor: pointer !important;
    outline: none !important;
    -webkit-transition: all 0.2s ease;
    transition: all 0.2s ease;
    border-width: 2px;
    display: inline-block;
    text-align: center;
    align-items: flex-start;
    cursor: default;
    box-sizing: border-box;
    margin: 0em;
    padding: 3px 6px !important;
    border-width: 2px;
    border-style: outset;
    border-image: initial;
    font-size: 14px !important;
}

.autoql-vanilla-chata-confirm-btn.no {
    color: inherit;
    border: 1px solid rgba(0,0,0,.15);
    background: inherit
}

.autoql-vanilla-chata-confirm-btn.yes {
    background: var(--chata-drawer-accent-color) !important;
    border: 2px outset var(--chata-drawer-accent-color) !important;
    color: white;
}

.autoql-vanilla-chata-confirm-btn:hover{
    opacity: .7;
}
.autoql-vanilla-chata-confirm-icon {
    color: #faad14;
    display: inline-block;
}

.autoql-vanilla-chata-header-center-container {
    position: relative;
    line-height: 60px;
    font-size: 18px;
    letter-spacing: 0.05em;
    font-weight: 600;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-family: var(--chata-drawer-font-family);
    font-size: 18px;
    letter-spacing: 0.05em;
}

.autoql-vanilla-chat-header-container button {
    background: transparent;
    border: none;
    color: white;
    margin: 10px;
    margin-right: 0;
    font-size: 20px;
    cursor: pointer;
    outline: none !important;

}
.autoql-vanilla-chata-button{
    background: none !important;
}
.autoql-vanilla-chata-button.close svg {
    width: 30px;
    height: 30px;
    padding-top: 3px;
}

.autoql-vanilla-chat-header-container button svg {
    width: 22px;
    height: 22px;
    padding-right: 2px;
    padding-top: 2px;
}

.autoql-vanilla-chat-header-container .autoql-vanilla-chata-button:hover{
    /* color: var(--chata-drawer-hover-color); */
    opacity: .7;
}

.autoql-vanilla-chata-button.clear-all {
    margin-right: 11px;
}

.autoql-vanilla-drawer-content{
    width: calc(100%);
    height: 100%;
    max-height: calc(100% - 150px);
    /* overflow: hidden; */
    /* overflow-y: auto;
    overflow-x: visible; */
    /* padding: 20px; */
    flex: 1;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 0%;
    background: var(--chata-drawer-background-color);
    /* position: relative; */
}

.autoql-vanilla-drawer-content:hover{
    /* overflow: auto; */
    /* overflow-y: auto; */
    /* width: 100%; */
}

.autoql-vanilla-chata-scrollbox {
  width: 100%;
  height: 100%;
  max-height: calc(100% - 150px);
  overflow: auto;
  visibility: hidden;
}

.autoql-vanilla-drawer-content, .autoql-vanilla-chata-scrollbox:hover, .autoql-vanilla-chata-scrollbox:focus {
  visibility: visible;
}

.autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble {
    position: relative;
    /* margin: 10px 0px 10px 10px; */
    margin: 10px -10px 10px 10px;    
    padding: 13px;
    border-radius: 10px;
    max-width: calc(100% - 20px);
    word-wrap: break-word;
    font-family: var(--chata-drawer-font-family);
    font-size: 14px;
    letter-spacing: 0.04em;
    border: 1px solid var(--chata-drawer-border-color);
    background: var(--chata-drawer-background-color);
    color: var(--chata-drawer-text-color-primary);
    min-width: 317px;
}

.autoql-vanilla-chat-message-bubble.single{
    min-width: auto;
}

.autoql-vanilla-chat-message-bubble.simple-response{
    min-width: 125px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.autoql-vanilla-chat-message-bubble.no-hover-response .autoql-vanilla-chata-single-response:hover{
    text-decoration: none;
    color: rgb(93,93,93);
    cursor: default;
}

.autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble.text {
    max-width: 85%;
}

.autoql-vanilla-chat-single-message-container.response {
    display: flex;
    justify-content: flex-start;
    margin-left: 10px;
    max-height: 85%;
    -webkit-animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    /* z-index: 1000; */
    position: relative;
}

.autoql-vanilla-chata-animation-message{
    display: flex;
    justify-content: flex-start;
    margin-left: 10px;
    max-height: 85%;
    -webkit-animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.autoql-vanilla-chata-response-content-container {
    background-color: inherit;
    font-size: 14px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: inherit;
    font-size: 14px;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.autoql-vanilla-chat-single-message-container.request {
    display: flex;
    justify-content: flex-end;
    margin-right: 20px;
    -webkit-animation: scale-up-br 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-br 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.autoql-vanilla-chat-single-message-container.request .autoql-vanilla-chat-message-bubble {
    background: var(--chata-drawer-accent-color);
    border: 1px solid var(--chata-drawer-accent-color);
    color: white;
    /* box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.1); */
}

.autoql-vanilla-chata-bar-container {
    position: relative;
}

.autoql-vanilla-chata-bar-container.query-input{
    display: flex;
}
/* ... */

